--- a/Canteen /index.html
+++ b/Canteen /index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <header>
+       <svg height="130" width="500">
+      
+         <defs>
+      
+           <linearGradient id="grad1">
+             <stop offset="0%" stop-color="lightgray" />
+             <stop offset="100%" stop-color="black" />
+           </linearGradient>
+         </defs>
+         <ellipse cx="100" cy="70" rx="45" ry="30" fill="url(#grad1)" />
+         <text fill="white" font-size="45" font-family="Verdana" x="68" y="86">LIB</text>
+         Sorry, your browser does not support inline SVG.
+       </svg>
             <h1>Laplace Information Board</h1>
             <nav>
                 <ul>
